# My-GitHub-Stars

./: .gitignore  AGENTS.md  Cargo.toml  README.md  cliff.toml
.github/workflows/: release.yml
src/: app.rs  main.rs
src/ai/: mod.rs
src/api/: mod.rs
src/auth/: mod.rs
src/classifier/: mod.rs
src/config/: mod.rs
src/gui/: db.rs  mod.rs  state.rs
src/gui/screens/: ai_search.rs  browse.rs  home.rs  login.rs  mod.rs  search.rs  settings.rs  setup.rs  syncing.rs
src/storage/: mod.rs
src/tui/: events.rs  mod.rs  ui.rs
src/web/: frontend.html  mod.rs
