[package]
name = "my-gh-stars"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "ghstars"
path = "src/main.rs"

[features]
default = ["tui"]
tui = []
gui = ["dep:dioxus"]
web = ["dep:axum", "dep:tokio-stream"]

[dependencies]
# TUI (always compiled; only used when the tui feature is active)
ratatui = "0.29"
crossterm = "0.28"

# GUI
dioxus = { version = "0.7", features = ["desktop"], optional = true }

# Web
axum = { version = "0.8", optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Config
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "2"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
open = "5"
unicode-width = "0.2"
